# Readactus-public

./: .gitignore  Cargo.toml  Makefile  PROJECT.md  README.md
crates/readactus-cli/: Cargo.toml
crates/readactus-cli/src/: main.rs
crates/readactus-core/: Cargo.toml
crates/readactus-core/src/: lib.rs
crates/readactus-core/tests/: cap_enforcement.rs
crates/readactus-detect/: Cargo.toml
crates/readactus-detect/src/: lib.rs
crates/readactus-gui/: Cargo.toml
crates/readactus-gui/src/: app.rs  main.rs  profiles.rs  theme.rs
crates/readactus-gui/src/screens/: activate.rs  home.rs  mod.rs  profiles.rs  progress.rs  result.rs  review.rs  source.rs  target.rs
crates/readactus-keygen/: Cargo.toml
crates/readactus-keygen/src/: main.rs
crates/readactus-license/: Cargo.toml
crates/readactus-license/src/: lib.rs
crates/readactus-transform/: Cargo.toml
crates/readactus-transform/src/: lib.rs
