[package]
name = "readactus-license"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Registration keys, machine activation, and entitlements for Readactus"

[dependencies]
ed25519-dalek.workspace = true
data-encoding.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile = "3"
